# ScholyBud

./: .coderabbit.yaml  .env.example  .gitignore  CLAUDE.md  README.md  index.html  offline.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
backend/: .env.example  README.md  config.py  dependencies.py  lifespan.py  main.py  pyproject.toml
backend/api/: __init__.py  auth.py
backend/core/: __init__.py  database.py  security.py
backend/models/: __init__.py  school.py  student.py  user.py
backend/schemas/: __init__.py  auth.py  student.py  user.py
backend/tests/: __init__.py  conftest.py  test_auth.py
src/: main.tsx
src/PWA/: service-worker-register.ts  service-worker.ts
src/app/(auth)/modern-login/: index.tsx
src/components/: ProvidersWrapper.tsx
src/lib/: constants.ts
src/lib/api/: client.ts  index.ts
src/lib/hooks/: useAuth.ts
src/lib/stores/: authStore.ts  index.ts
src/services/api/: client.ts
src/services/offline/: index.ts  storage.service.ts  sync.service.ts
src/types/: api.ts  attendance.ts  index.ts  student.ts
